Finished Registeration&Login routes (identity)

--- a/Bookify.Application/Bookify.Application.csproj
+++ b/Bookify.Application/Bookify.Application.csproj
@@ -10,4 +10,13 @@
     <ProjectReference Include="..\Bookify.DA\Bookify.DA.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mapping\" />
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+  </ItemGroup>
+
 </Project>
