Stripe Done, hotel,rooms data seeding done

--- a/Bookify.API/appsettings.json
+++ b/Bookify.API/appsettings.json
@@ -21,5 +21,14 @@
   "AdminUser": {
     "Email": "admin@bookify.com",
     "Password": "AdminPass@123"
+  },
+
+  "Stripe": {
+    "ApiKey": "your_api_key_here",
+    "SecretKey": "your_secret_key_here",
+    "WebhookSecret": "your_webhook_secret_here",
+    "SuccessUrl": "https://localhost:7244/payment-success?session_id={CHECKOUT_SESSION_ID}",
+    "CancelUrl": "https://localhost:7244/payment-cancel"
   }
 }
+
