--- a/Bookify.Application/Bookify.Application.csproj
+++ b/Bookify.Application/Bookify.Application.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    <PackageReference Include="Stripe.net" Version="50.0.0" />
   </ItemGroup>
 
 </Project>
