Admin CRUD operation on (Rooms,RoomTypes)

--- a/Bookify.API/appsettings.json
+++ b/Bookify.API/appsettings.json
@@ -24,9 +24,9 @@
   },
 
   "Stripe": {
-    "ApiKey": "your_api_key_here",
-    "SecretKey": "your_secret_key_here",
-    "WebhookSecret": "your_webhook_secret_here",
+    "ApiKey": "YOUR_NEW_API_KEY",
+    "SecretKey": "YOUR_NEW_SECRET_KEY",
+    "WebhookSecret": "YOUR_NEW_WEBHOOK_SECRET",
     "SuccessUrl": "https://localhost:7244/payment-success?session_id={CHECKOUT_SESSION_ID}",
     "CancelUrl": "https://localhost:7244/payment-cancel"
   }
